<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_change_langbottomsheet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/langBottomsheet_txt_heading"
        android:textColor="@color/textPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_eng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:text="@string/langBottomsheet_rb_english_title" />


            <RadioButton
                android:id="@+id/rb_guj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/langBottomsheet_rb_gujarati_title" />


            <RadioButton
                android:id="@+id/rb_hindi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/langBottomsheet_rb_hindi_title" />


        </RadioGroup>

        <Button
            android:id="@+id/btn_change_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:text="@string/langBottomsheet_btn_change_language" />
    </LinearLayout>

</LinearLayout>