<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ChooseLanguageActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_choose_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/actvityChooseLang_tv_title_choose_language"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <RadioButton
                    android:id="@+id/rb_eng_choose_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:text="@string/activityChooseLang_rb_title_english"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_guj_choose_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/activityChooseLang_rb_title_gujarati"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_hindi_choose_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/activityChooseLang_rb_title_hindi"
                    android:textSize="18sp" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/activityChooseLang_btn_title_next" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>