<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ViewUndeliveredOrdersBySalesman">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/img_back_undelivered_order_by_salesman"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/icon_arrow_left_white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/img_back_undelivered_order_by_salesman"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_title_undelivered_order_by_salesman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/undelorderbysaelsman_txt_titlebar_heading"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_title_distributor_name_undelivered_order_by_salesman"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="Distributor Name"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_salesman_name_undelivered_order_by_salesman"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/undelorderbysaelsman_txt_title_salesman_name"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_total_count_undelivered_order_by_salesman"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@color/white"
                android:paddingStart="10dp"
                android:gravity="center_vertical"
                android:lines="1"
                android:text=""
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/tv_total_amount_undelivered_order_by_salesman"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingStart="10dp"
                android:lines="1"
                android:gravity="center_vertical"
                android:text=""
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_deliver_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undelorderbysaelsman_btn_title_deliver_all"
        android:layout_gravity="end"
        android:layout_marginRight="10dp"
        android:textSize="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_undelivered_order_by_salesman_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>